2009-12-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/nasl_host.c: Removed extern function declarations.

2009-12-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/nasl_host.c, nasl/nasl_host.h: Cosmetics, added missing
	includes.

2009-12-09  Tim Brown <timb@openvas.org>

	* misc/network.c: Fixed a potential resource leak.

2009-12-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/pidfile.c: Added missing include.

2009-12-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/pcap.c: Cosmetics and docs.

2009-12-07  Tim Brown <timb@openvas.org>

	* misc/store.c: Fixed a potential memory leak.

2009-12-07  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.rc2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-12-07  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-rc1 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.rc1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-12-05  Michael Wiegand <michael.wiegand@intevation.de>

	* nasl/exec.c (exec_nasl_script): Use correct glib function for
	determining the directory.

2009-12-04  Michael Wiegand <michael.wiegand@intevation.de>

	* nasl/exec.c (exec_nasl_script): Fixed a potential memory leak,
	improved error handling, made glib usage more consistent, clarified
	return value in documentation.

2009-12-04  Michael Wiegand <michael.wiegand@intevation.de>

	Add support for defining one additional directory on the command line
	which will be used to look for includes to openvas-nasl.

	* nasl/nasl.c (main): Introduced the --include-dir / -i command line
	parameter.

2009-12-04  Michael Wiegand <michael.wiegand@intevation.de>

	* ChangeLog: Fixed bug # in the last entry.

2009-12-04  Michael Wiegand <michael.wiegand@intevation.de>

	Solved bug #1101 (http://bugs.openvas.org/1101); openvas-nasl now
	supports relative paths.
